compiler/tests/language/negative/oopSurfaceRoleCapability/module/importAliasIdentityWrong.qn
module app.badAlias

import http.{Session as HttpSession}
import db.session.{Session as DbSession}

pub aliasIdentityWrong(value: HttpSession<UserSession>) -> DbSession<UserSession> {
  return value
}
